our team page ,contact us page and other minor changes

--- a/index.html
+++ b/index.html
@@ -72,7 +72,90 @@
         </p>
       </div>
     </div>
-    <!-- OUR SERVICES PAGE  -->
-     
+    <!-- OUR TEAM PAGE  -->
+    <div class="team-section">
+      <div class="team-header">
+        <h1>Our Team</h1>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry. Lorem Ipsum has been the industry's standard dummy text ever
+          since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to make a type specimen book. It has survived not only
+          five
+        </p>
+      </div>
+
+      <div class="team-members">
+        <div class="member-card">
+          <div class="member-photo">
+            <img src="" alt="Himanshu Sharma - Founder" />
+          </div>
+          <div class="member-name">Himanshu Sharma</div>
+          <div class="member-title">Founder</div>
+          <div class="member-description">
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text
+            ever since the 1500s, when an unknown printer took a galley of type
+            and scrambled it to make a type specimen book. It has survived not
+            only five
+          </div>
+        </div>
+
+        <div class="member-card">
+          <div class="member-photo">
+            <img src="" alt="Himanshu Sharma - Co-Founder" />
+          </div>
+          <div class="member-name">Himanshu Sharma</div>
+          <div class="member-title">Co-Founder</div>
+          <div class="member-description">
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text
+            ever since the 1500s, when an unknown printer took a galley of type
+            and scrambled it to make a type specimen book. It has survived not
+            only five
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Contact Us Page  -->
+
+    <div class="contact-page-container">
+      <section class="contact-section">
+        <h1 class="section-title">Contact Us</h1>
+        <p class="section-description">
+          Questions? Feedback? We're here to help — connect with us anytime.
+        </p>
+
+        <div class="contact-cards-container">
+          <div class="contact-card">
+            <h3>WhatApps</h3>
+            <p class="email-address">WhatApps Us</p>
+            <p class="whatsapp-link">Message Us &rightarrow;</p>
+          </div>
+          <div class="contact-card">
+            <h3>Email</h3>
+            <p class="email-address">Send us your queries anytime</p>
+            <p class="email-address">Mindspark@gmail.com &rightarrow;</p>
+          </div>
+          <div class="contact-card">
+            <h3>FAQ</h3>
+            <p class="email-address">Browse FAQs and tutorials</p>
+            <p class="support-link">Support &rightarrow;</p>
+          </div>
+          <div class="contact-card">
+            <h3>Feedback?</h3>
+            <p class="email-address" >Write to Us</p>
+            <p class="feedback-link">Feedback &rightarrow;</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="download-app-section">
+        <h1 class="section-title">Download the App</h1>
+        <p class="section-description">Download now on Android</p>
+        <button class="google-play-button">Open In Google Play Store</button>
+      </section>
+    </div>
   </body>
 </html>
